--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.5.0",
     "googlemaps": "^1.12.0",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
